@@ -6,7 +6,6 @@ jEditTextArea.java
 Copyright (C) 1999 Slava Pestov
 Copyright (C) 2002 Ian Lewis (IanLewis@member.fsf.org)
 
-
 You may use and modify this package for any purpose. Redistribution is
 permitted, in both source and binary form, provided that this notice
 remains intact in all source distributions of this package.
