@@ -1,3 +1,9 @@
+06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added back rudimentary key bindings using Swing Actions so they get
+      dispached by Swing and are displayed in menus. But infrastructure is
+      in place to allow jsXe to catch key bindings itself.
+
 06/20/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Updated the sourceview's actions to extend the new LocalizedAction class.
